Fixed mobile scaling
Made it so mobile textboxes are not spilling off the side of the page.

--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ img.drewpic {
 	text-align: center;
 	font-size: 48px;
 	background-image: url("https://i.imgur.com/kubelOX.jpg");
-	margin-left: 250px;
-	margin-right: 250px;
+	margin-left: 20%;
+	margin-right: 20%;
 	border-radius: 50px;
 	font-family: "Arial", Arial, Sans-serif;
 }
@@ -115,7 +115,7 @@ img.drewpic {
 
 .dates {
 	text-align: left;
-	margin-left: 200px;
+	margin-left: 100px;
 }
 
 .chegg {
